objects/ReportUtilityBarItem__mdt.object
<CustomObject>
    <fields>
        <fullName>DisplayName__c</fullName>
        <description>The name that will be displayed in the component's list item.</description>
        <inlineHelpText>The name that will be displayed in the component's list item.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportBarUtilitySection__c</fullName>
        <description>The Section of the Utility Bar this report will be shown in.</description>
        <inlineHelpText>The Section of the Utility Bar this report will be shown in.</inlineHelpText>
        <label>Report Bar Utility Section</label>
        <referenceTo>ReportBarUtilitySection__mdt</referenceTo>
        <relationshipLabel>Report Utility Bar Items</relationshipLabel>
        <relationshipName>ReportUtilityBarItems</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ReportUtilityBar__c</fullName>
        <description>The Report Utility bar this item should show up on.</description>
        <inlineHelpText>The Report Utility bar this item should show up on.</inlineHelpText>
        <label>Report Utility Bar</label>
        <referenceTo>ReportUtilityBar__mdt</referenceTo>
        <relationshipLabel>Report Utility Bar Items</relationshipLabel>
        <relationshipName>ReportUtilityBarItems</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The Order in which these objects appear in the list. Smallest to largest.</description>
        <inlineHelpText>The Order in which these objects appear in the list. Smallest to largest.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>The URL this list item should direct the user to.</description>
        <inlineHelpText>The URL this list item should direct the user to.</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <description>An item on a report utility bar.</description>
    <label>Report Utility Bar Item</label>
    <pluralLabel>Report Utility Bar Items</pluralLabel>
</CustomObject>